force-app/main/default/objects/ESS_Application__c.object
<CustomObject>
    <fields>
        <fullName>Status_Marriage_EN_New_Title__c</fullName>
        <label>Status Marriage EN New Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Mr.</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Mrs.</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Miss</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Ms.</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Dr.</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Marriage_EN_Title__c</fullName>
        <label>Status Marriage EN Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Mr.</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Mrs.</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Miss</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Ms.</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Dr.</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Marriage_Employee_Id__c</fullName>
        <label>Status Marriage Employee Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Marriage_Gender__c</fullName>
        <label>Status Marriage Gender</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Marriage_Occupation__c</fullName>
        <label>Status Marriage Occupation</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Marriage_Status__c</fullName>
        <label>Status Marriage Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Married</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Divorced</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Widow</label>
                </value>
                <value>
                    <fullName>0</fullName>
                    <label>Single</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Seperate</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Marriage_TH_FN__c</fullName>
        <label>Status Marriage TH FN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Marriage_TH_LN__c</fullName>
        <label>Status Marriage TH LN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Marriage_TH_New_FN__c</fullName>
        <label>Status Marriage TH New FN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Marriage_TH_New_LN__c</fullName>
        <label>Status Marriage TH New LN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Marriage_TH_New_Title__c</fullName>
        <label>Status Marriage TH New Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Mr.</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Mrs.</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Miss</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Ms.</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Dr.</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Marriage_TH_Title__c</fullName>
        <label>Status Marriage TH Title</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Widow_Change_Doc_Id__c</fullName>
        <label>Status Widow Change Doc Id</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Widow_Change_LN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Status Widow Change LN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_Widow_Change_Title__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Status Widow Change Title</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_Widow_Doc_Id__c</fullName>
        <inlineHelpText>ใบมรณะบัตร</inlineHelpText>
        <label>Status Widow Doc Id</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Widow_Doc_Issue_Date__c</fullName>
        <label>Status Widow Doc Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_Widow_Doc_Issue_Location__c</fullName>
        <label>Status Widow Doc Issue Location</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Widow_Doc_Issue_Province__c</fullName>
        <label>Status Widow Doc Issue Province</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Widow_Doc_No__c</fullName>
        <label>Status Widow Doc No</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Widow_EN_FN__c</fullName>
        <label>Status Widow EN FN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Widow_EN_LN__c</fullName>
        <label>Status Widow EN LN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Widow_EN_New_LN__c</fullName>
        <label>Status Widow EN New LN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Widow_EN_New_Title__c</fullName>
        <label>Status Widow EN New Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Mr.</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Mrs.</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Miss</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Ms.</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Dr.</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Widow_EN_Title__c</fullName>
        <label>Status Widow EN Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Mr.</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Mrs.</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Miss</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Ms.</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Dr.</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Widow_TH_FN__c</fullName>
        <label>Status Widow TH FN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Widow_TH_LN__c</fullName>
        <label>Status Widow TH LN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Widow_TH_New_LN__c</fullName>
        <label>Status Widow TH New LN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Widow_TH_New_Title__c</fullName>
        <label>Status Widow TH New Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Mr.</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Mrs.</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Miss</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Ms.</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Dr.</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Widow_TH_Title__c</fullName>
        <label>Status Widow TH Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Mr.</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Mrs.</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Miss</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Ms.</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Dr.</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>SendingToSAP</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                    <label>Updated in SAP / Completed</label>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                    <label>Error updated in SAP</label>
                </value>
                <value>
                    <fullName>WaitingForSubmit</fullName>
                    <isActive>false</isActive>
                    <label>WaitingForSubmit</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject_Type__c</fullName>
        <formula>IF( Is_Update_Name__c , &apos;Name &apos;, &apos;&apos; ) +
IF( Is_Update_Status__c , &apos;Status &apos;, &apos;&apos; ) +
IF( Is_Update_Child__c , &apos;Child &apos;, &apos;&apos; ) +
IF( Is_Update_Death__c , &apos;Death &apos;, &apos;&apos; ) +
IF( Is_Update_Education__c , &apos;Education &apos;, &apos;&apos; ) +
IF( Is_Update_License__c , &apos;License &apos;, &apos;&apos; ) +
IF( Is_Update_Address__c , &apos;Address &apos;, &apos;&apos; ) +
IF( Is_Update_ContactPerson__c , &apos;ContactPerson &apos;, &apos;&apos; ) +
IF( Is_Update_Tax__c , &apos;Tax &apos;, &apos;&apos; )</formula>
        <label>Subject Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitted_Date__c</fullName>
        <label>Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tax_Annuity_Interest_Amount__c</fullName>
        <label>Tax Annuity Interest Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Child_Count__c</fullName>
        <label>Tax Child Count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Donation_For_Charity_Amount__c</fullName>
        <label>Tax Donation For Charity Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Donation_For_Education_Amount__c</fullName>
        <label>Tax Donation For Education Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_First_House_Exclude_Tax_Amount__c</fullName>
        <label>Tax First House Exclude Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Income_From_RMF_Amount__c</fullName>
        <label>Tax Income From RMF Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Income_From_SSF_Amount__c</fullName>
        <label>Tax Income From SSF Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Interest_On_Loan_For_House_Amount__c</fullName>
        <label>Tax Interest On Loan For House Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Marriage_Person_Earn_Income__c</fullName>
        <inlineHelpText>1) ลดหย่อนคู่สมรส = คู่สมรสไม่มีเงินได้
(2) ไม่ลดหย่อนคู่สมรส = คู่สมรสมีเงินได้</inlineHelpText>
        <label>Tax Marriage Person Earn Income</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>ลดหย่อนคู่สมรส</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>ไม่ลดหย่อนคู่สมรส</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tax_Marriage_Status__c</fullName>
        <label>Tax Marriage Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <label>Single</label>
                </value>
                <value>
                    <fullName>1</fullName>
                    <label>Married</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tax_Married_Deduction_Father_Amount__c</fullName>
        <label>Tax Married Deduction Father Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Married_Deduction_Mother_Amount__c</fullName>
        <label>Tax Married Deduction Mother Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Married_Father_Insurance_Paid_Amount__c</fullName>
        <label>Tax Married Father Insurance Paid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Married_Life_Insurance_Paid_Amount__c</fullName>
        <label>Tax Married Life Insurance Paid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Married_Mother_Insurance_Paid_Amount__c</fullName>
        <label>Tax Married Mother Insurance Paid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Pregnancy_Care_Amount__c</fullName>
        <label>Tax Pregnancy Care Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Self_Deduction_Father_Amount__c</fullName>
        <label>Tax Self Deduction Father Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Self_Deduction_Mother_Amount__c</fullName>
        <label>Tax Self Deduction Mother Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Self_Father_Insurance_Paid_Amount__c</fullName>
        <label>Tax Self Father Insurance Paid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Self_Life_Insurance_Paid_Amount__c</fullName>
        <label>Tax Self Life Insurance Paid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Self_Mother_Insurance_Paid_Amount__c</fullName>
        <label>Tax Self Mother Insurance Paid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Sponsor_Amount__c</fullName>
        <label>Tax Sponsor Amount</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Total_Child_Count__c</fullName>
        <label>Tax Total Child Count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <label>Unit</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Verified_Date__c</fullName>
        <label>Verified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Verify_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Verify By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ESS_Application</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>ESS Application</label>
    <nameField>
        <displayFormat>APP-{00000}</displayFormat>
        <label>ESS Application Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>